# review-assistant

./: .gitignore  ABOUT.md  CHANGELOG.md  GUIDE.zh-CN.md  LICENSE  README.md  SKILL.md  TODO.md  app.py  build_app.sh  pyproject.toml  requirements.txt
api/: main.py
api/routers/: files.py  settings.py  system.py  tasks.py  zotero.py
docs/: README.md  review-mode.md
evals/: eval_review.html  evals.json  trigger_evals.json
examples/40hz-neurodegeneration/: README.md  extraction_schema.yaml  fictional_fixture.json  protocol.yaml  search_plan.yaml  synthesis_plan.yaml
review_assistant/: __init__.py  auto_lit.py  bootstrap.py  caching.py  claim_verify.py  cli.py  config.py  eligibility.py  evidence_pack.py  explore_synthesize.py  extraction.py  io_utils.py  llm_client.py  paper_breakdown.py  pdf_utils.py  pipeline.py  project.py  prompts.py  protocol.py  review_audit.py  review_evidence.py  review_search.py  review_synthesis.py  run_state.py  screening.py  studies.py  utils.py  verification.py  zotero_read.py  zotero_web.py
scripts/: auto_lit.py  caching.py  claim_verify.py  config.py  errors.py  evidence_pack.py  explore_synthesize.py  extraction.py  llm_client.py  paper_breakdown.py  pipeline.py  prompts.py  test_explore_synthesize.py  utils.py  verification.py  zotero_read.py  zotero_reader.py  zotero_web.py
specs/: 2026-06-12-auto-lit-design.md  2026-06-15-zotero-web-api-sync-design.md
synthesis_output/: article.md  diagram.md  outline.json  report.md  table.md  verification.md  verification_after_fix.md
tests/: test_auto_lit.py  test_claim_verify.py  test_config.py  test_evidence_pack.py  test_explore_synthesize.py  test_llm_client.py  test_paper_breakdown.py  test_pipeline.py  test_review_audit.py  test_review_boundary_hardening.py  test_review_cli.py  test_review_eligibility.py  test_review_end_to_end.py  test_review_evidence.py  test_review_examples.py  test_review_fulltext_status.py  test_review_outcomes.py  test_review_project.py  test_review_screening_completeness.py  test_review_search.py  test_review_search_to_audit.py  test_review_section_validation.py  test_review_synthesis.py  test_screening.py  test_studies.py  test_zotero_reader.py  test_zotero_web.py
web/: package-lock.json  package.json  vite.config.ts
(+33 files in other folders)
