[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "review-assistant"
version = "0.2.0"
description = "Zotero Literature Review Assistant"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "PyMuPDF>=1.24.0",
    "openai>=1.0.0",
    "requests>=2.31.0",
    "PyYAML>=6.0",
    "fastapi>=0.100.0",
    "uvicorn>=0.20.0",
]

[project.scripts]
review-assistant = "review_assistant.cli:main"
review-assistant-read = "review_assistant.zotero_read:main"
review-assistant-verify = "review_assistant.claim_verify:main"
review-assistant-breakdown = "review_assistant.paper_breakdown:main"
review-assistant-synthesize = "review_assistant.explore_synthesize:main"
review-assistant-autolit = "review_assistant.auto_lit:main"

[tool.setuptools]
packages = ["review_assistant"]

[tool.setuptools.package-data]
review_assistant = ["templates/**/*.yaml", "profiles/*.json"]
